--- a/index.css
+++ b/index.css
@@ -1,3 +1,101 @@
+.page-wrapper {
+  margin: 20px 100px 5px 100px;
+  background-color: #F4F6F7;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex-grow: 1;
+  flex: 1 1 auto;
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+}
+
+.large-column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 2;
+}
+
+
+.title-style{
+  margin: 1em 0 0.5em 0;
+  font-weight: 600;
+  font-family: 'Titillium Web', sans-serif;
+  position: relative;
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.4);
+  font-size: 50px;
+  line-height: 40px;
+  color: #355681;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(53,86,129, 0.3);
+}
+
+.monospace {
+  font-family: "Lucida Console", Courier, monospace;
+}
+
+b.thicker {
+	font-weight: 900;
+	font-size: 130%;
+	color: black;
+	letter-spacing: 0px;
+	font-family: "Times New Roman", Times, serif;
+}
+
+#confirmedValue {
+  border-radius: 15px;
+  background: #b0c4de;
+  padding: 20px;
+  width: 250px;
+  height: 80px;
+  text-align: center;
+  font-size: 175%;
+  color: blue;
+  letter-spacing: 5px;
+  font-weight: bold;
+}
+
+#deathsValue {
+  border-radius: 15px;
+  background: #b0c4de;
+  padding: 20px;
+  width: 250px;
+  height: 80px;
+  text-align: center;
+  font-size: 175%;
+  color: red;
+  letter-spacing: 5px;
+  font-weight: bold;
+}
+
+#recoveredValue {
+  border-radius: 15px;
+  background: #b0c4de;
+  padding: 20px;
+  width: 250px;
+  height: 80px;
+  text-align: center;
+  font-size: 175%;
+  color: green;
+  letter-spacing: 5px;
+  font-weight: bold;
+}
+
 svg
 {
   border: 1px solid lightgrey;
@@ -37,54 +135,6 @@ svg
   font: 14px sans-serif;
   background: orange;
   position: absolute;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.large-column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 2;
-}
-
-.page-wrapper {
-  margin: 20px 300px 5px 300px;
-  background-color: #F4F6F7;
-}
-
-
-.placeholder {
-  background-color: orange;
-  height: 100px;
-  margin:15px 30px 15px 30px;
-}
-
-.title-style{
-  margin: 1em 0 0.5em 0;
-  font-weight: 600;
-  font-family: 'Titillium Web', sans-serif;
-  position: relative;
-  text-shadow: 0 -1px 1px rgba(0,0,0,0.4);
-  font-size: 50px;
-  line-height: 40px;
-  color: #355681;
-  text-transform: uppercase;
-  border-bottom: 1px solid rgba(53,86,129, 0.3);
 }
 
 .item-map-style{
